--- a/custom_components/power_watchdog/translations/ru.json
+++ b/custom_components/power_watchdog/translations/ru.json
@@ -3,13 +3,29 @@
     "step": {
       "user": {
         "title": "Power Watchdog",
-        "description": "Уведомления в Telegram при смене online/offline у выбранной сущности (например, Tuya-розетки).",
+        "description": "Уведомления в Telegram при смене online/offline по датчику напряжения (например, Tuya-розетки).",
         "data": {
           "telegram_token": "Telegram Bot Token",
           "telegram_chat_id": "Telegram Chat ID",
-          "entity_id": "Сущность для контроля (entity_id)",
+          "voltage_entity_id": "Датчик напряжения (entity_id)",
+          "entity_id": "Сущность для контроля (legacy)",
           "debounce_seconds": "Задержка (debounce), сек",
-          "stale_timeout_seconds": "Считать оффлайн, если нет обновлений N сек"
+          "stale_timeout_seconds": "Считать оффлайн, если нет обновлений N сек",
+          "refresh_seconds": "Принудительное обновление, сек",
+          "notify_on_start": "Уведомлять при запуске интеграции",
+          "telegram_enabled": "Включить уведомления Telegram",
+          "svitlobot_channel_key": "Ключ канала SvitloBot"
+        }
+      }
+    }
+  },
+  "options": {
+    "step": {
+      "init": {
+        "title": "Настройки Power Watchdog",
+        "data": {
+          "telegram_enabled": "Включить уведомления Telegram",
+          "svitlobot_channel_key": "Ключ канала SvitloBot"
         }
       }
     }
